--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***<span style=\"color: red\">Important! uncomment the following files to run the book with out errors</span>***"
+    "***<span style=\"color: red\">Important! uncomment the following files to run the book with out errors.</span>***"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "(2356, 17)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,51 +162,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>666094000022159362</td>\n",
-       "      <td>https://pbs.twimg.com/media/CT5w9gUW4AAsBNN.jpg</td>\n",
+       "      <th>1330</th>\n",
+       "      <td>757597904299253760</td>\n",
+       "      <td>https://pbs.twimg.com/media/CoOGZjiWAAEMKGx.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>bloodhound</td>\n",
-       "      <td>0.195217</td>\n",
-       "      <td>True</td>\n",
-       "      <td>German_shepherd</td>\n",
-       "      <td>0.078260</td>\n",
-       "      <td>True</td>\n",
-       "      <td>malinois</td>\n",
-       "      <td>0.075628</td>\n",
-       "      <td>True</td>\n",
+       "      <td>doormat</td>\n",
+       "      <td>0.836106</td>\n",
+       "      <td>False</td>\n",
+       "      <td>wallet</td>\n",
+       "      <td>0.056627</td>\n",
+       "      <td>False</td>\n",
+       "      <td>purse</td>\n",
+       "      <td>0.051333</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1141</th>\n",
-       "      <td>729838605770891264</td>\n",
-       "      <td>https://pbs.twimg.com/ext_tw_video_thumb/72983...</td>\n",
+       "      <th>1509</th>\n",
+       "      <td>785927819176054784</td>\n",
+       "      <td>https://pbs.twimg.com/media/CugtKeXWEAAamDZ.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>stone_wall</td>\n",
-       "      <td>0.758218</td>\n",
+       "      <td>teddy</td>\n",
+       "      <td>0.972070</td>\n",
        "      <td>False</td>\n",
-       "      <td>patio</td>\n",
-       "      <td>0.074205</td>\n",
-       "      <td>False</td>\n",
-       "      <td>prison</td>\n",
-       "      <td>0.013826</td>\n",
-       "      <td>False</td>\n",
+       "      <td>toy_poodle</td>\n",
+       "      <td>0.008493</td>\n",
+       "      <td>True</td>\n",
+       "      <td>chow</td>\n",
+       "      <td>0.002883</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                tweet_id                                            jpg_url  \\\n",
-       "14    666094000022159362    https://pbs.twimg.com/media/CT5w9gUW4AAsBNN.jpg   \n",
-       "1141  729838605770891264  https://pbs.twimg.com/ext_tw_video_thumb/72983...   \n",
+       "                tweet_id                                          jpg_url  \\\n",
+       "1330  757597904299253760  https://pbs.twimg.com/media/CoOGZjiWAAEMKGx.jpg   \n",
+       "1509  785927819176054784  https://pbs.twimg.com/media/CugtKeXWEAAamDZ.jpg   \n",
        "\n",
-       "      img_num          p1   p1_conf  p1_dog               p2   p2_conf  \\\n",
-       "14          1  bloodhound  0.195217    True  German_shepherd  0.078260   \n",
-       "1141        1  stone_wall  0.758218   False            patio  0.074205   \n",
+       "      img_num       p1   p1_conf  p1_dog          p2   p2_conf  p2_dog     p3  \\\n",
+       "1330        1  doormat  0.836106   False      wallet  0.056627   False  purse   \n",
+       "1509        1    teddy  0.972070   False  toy_poodle  0.008493    True   chow   \n",
        "\n",
-       "      p2_dog        p3   p3_conf  p3_dog  \n",
-       "14      True  malinois  0.075628    True  \n",
-       "1141   False    prison  0.013826   False  "
+       "       p3_conf  p3_dog  \n",
+       "1330  0.051333   False  \n",
+       "1509  0.002883    True  "
       ]
      },
      "execution_count": 6,
@@ -249,10 +249,10 @@
    "outputs": [],
    "source": [
     "# setting up all the necessary placeholders for API\n",
-    "consumer_key = 'xxx.xxx.xxx'\n",
-    "consumer_secret = 'xxx.xxx.xxx'\n",
-    "access_token = 'xxx.xxx.xxx'\n",
-    "access_secret = 'xxx.xxx.xxx'\n",
+    "consumer_key = 'xxx.xxx.xxx.xxx'\n",
+    "consumer_secret = 'xxx.xxx.xxx.xxx'\n",
+    "access_token = 'xxx.xxx.xxx.xxx'\n",
+    "access_secret = 'xxx.xxx.xxx.xxx'\n",
     "\n",
     "auth = OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,8 @@
     "    \n",
     "    # querying a single id\n",
     "    else:\n",
-    "        with open(new_file_name, mode = 'w') as outfile:\n",
+    "        file_to_use = [s for s in os.listdir() if \"tweet_json\" in s][-1]\n",
+    "        with open(file_to_use, mode = 'a') as outfile:\n",
     "            try:\n",
     "                page = api_ins.get_status(one_id, tweet_mode='extended')\n",
     "                json.dump(page, outfile)\n",
@@ -310,21 +311,21 @@
     "            except Exception as e:\n",
     "                print(\"Error for: \" + str(one_id) + \" - \" + str(e))\n",
     "                failed_ids.append(one_id)\n",
-    "    \n",
+    "\n",
     "    return failed_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-f789db9bbabf>, line 10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-29-f789db9bbabf>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    print(assert len(set_one)+len(set_two)+len(set_three) == len(tweet_ids))\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "900 900 556 2356\n",
+      "True\n"
      ]
     }
    ],
@@ -337,15 +338,50 @@
     "set_one = tweet_ids[0:900]; set_two = tweet_ids[900:1800]; set_three = tweet_ids[1800:]\n",
     "\n",
     "# checking the lengths so that we send 900 ids/requests.\n",
-    "len(set_one), len(set_two), len(set_three), len(set_one)+len(set_two)+len(set_three),\n",
-    "print(assert len(set_one)+len(set_two)+len(set_three) == len(tweet_ids))"
+    "print(len(set_one), len(set_two), len(set_three), len(set_one)+len(set_two)+len(set_three))\n",
+    "print(len(set_one)+len(set_two)+len(set_three) == len(tweet_ids))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error for: 888202515573088257 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 873697596434513921 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 872668790621863937 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 869988702071779329 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 866816280283807744 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 861769973181624320 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 845459076796616705 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 842892208864923648 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 837012587749474308 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 827228250799742977 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 802247111496568832 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 775096608509886464 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 770743923962707968 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 492\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error for: 761334018830917632 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
+      "That took about 15.3 mins.\n"
+     ]
+    }
+   ],
    "source": [
     "# fetching data 1st iteration\n",
     "# starting the timer\n",
@@ -363,9 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have about 14 failed requests.\n"
+     ]
+    }
+   ],
    "source": [
     "# no of erroneous ids\n",
     "print(\"we have about {} failed requests.\".format(len(test_one)))"
@@ -373,9 +417,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 501\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error for: 678023323247357953 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
+      "That took about 15.1 mins.\n"
+     ]
+    }
+   ],
    "source": [
     "# fetching data 2nd iteration\n",
     "# starting the timer\n",
@@ -393,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have about 2 failed requests.\n"
+     ]
+    }
+   ],
    "source": [
     "# no of erroneous ids\n",
     "print(\"we have about {} failed requests.\".format(len(test_two)))"
@@ -403,9 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That took about 4.0 mins.\n"
+     ]
+    }
+   ],
    "source": [
     "# fetching data 3rd iteration\n",
     "# starting the timer\n",
@@ -423,43 +506,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we have about 0 failed requests.\n"
+     ]
+    }
+   ],
    "source": [
     "# no of erroneous ids\n",
     "print(\"we have about {} failed requests.\".format(len(test_three)))"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total failed request are: 16\n",
+      "Error for: 888202515573088257 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 873697596434513921 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 872668790621863937 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 869988702071779329 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 866816280283807744 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 861769973181624320 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 845459076796616705 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 842892208864923648 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 837012587749474308 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 827228250799742977 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 802247111496568832 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 775096608509886464 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 770743923962707968 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lets save the failed ids into one master list\n",
+    "failed_ids = test_one + test_two + test_three\n",
+    "print(\"Total failed request are: {}\".format(len(failed_ids)))\n",
+    "\n",
+    "# ids that failed\n",
+    "indi_fail = []\n",
+    "\n",
+    "#for each failed id, lets try to fetch status individually.\n",
+    "for failed_id in failed_ids:\n",
+    "    temp = fetch_and_save(ids = None, api_ins = api, one_id = failed_id)\n",
+    "    indi_fail.append(temp)\n",
+    "\n",
+    "# removing empty elements from list\n",
+    "indi_fail = [x for x in indi_fail if x]\n",
+    "\n",
+    "# checking if there is change\n",
+    "len(failed_ids) - len(indi_fail)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. [x] **Okay, let's combine the successful jsons into one file, called the `tweet_json_master.txt`**"
+    "**<span style=\"color:red\"> We have 14 missing records, the following were confirmed using `twurl` command from Ruby/Gems.</span>**<br>\n",
+    "**<span style=\"color:green\"> The possible reason is.</span>**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![error](error.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. [x] **Okay, let's combine the successful jsons into one file, called the `tweet_master.txt`**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((886, 32), (898, 32), (558, 28))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# combing all successful jsons into one master file\n",
     "json_1 = pd.read_json('tweet_json.txt', lines = True, encoding = 'utf-8')\n",
     "json_2 = pd.read_json('tweet_json_1.txt', lines = True, encoding = 'utf-8')\n",
+    "json_3 = pd.read_json('tweet_json_2.txt', lines = True, encoding = 'utf-8')\n",
     "\n",
     "# total rows that we need to have in our resulting dataframe\n",
-    "json_1.shape, json_2.shape"
+    "json_1.shape, json_2.shape, json_3.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "json_master = pd.concat([json_1, json_2], ignore_index = True, join = 'outer', sort = True)\n",
-    "json_master.to_json('tweet_json_master.txt', orient = 'records', lines = True)"
+    "json_master = pd.concat([json_1, json_2, json_3], ignore_index = True, join = 'outer', sort = True)\n",
+    "json_master.to_json('tweet_master.txt', orient = 'records', lines = True)"
    ]
   },
   {
@@ -471,9 +646,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'dataset',\n",
+       " 'error.png',\n",
+       " 'New Text Document.txt',\n",
+       " 'README.md',\n",
+       " 'Untitled.ipynb',\n",
+       " 'wrangle_act.ipynb']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# moving all data files under one folder - dataset\n",
     "# removing the temporary files, that acted as placeholders\n",
@@ -490,7 +683,7 @@
     "# let us move these files\n",
     "\n",
     "# updating our files_list\n",
-    "files_list[-1] = 'tweet_json_master.txt'\n",
+    "files_list[-1] = 'tweet_master.txt'\n",
     "\n",
     "# moving only required files\n",
     "for file in files_list:\n",
@@ -498,7 +691,7 @@
     "        os.rename(file, folder+'/'+file)\n",
     "\n",
     "# removing the tweet_json and tweet_json_1 files as they are not required anymore\n",
-    "for file in ['tweet_json.txt', 'tweet_json_1.txt']:\n",
+    "for file in [s for s in os.listdir() if \"tweet_json\" in s]:\n",
     "    os.remove(file)\n",
     "    \n",
     "# lisitng the current directory\n",
