update code, that works fine

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -28,8 +28,7 @@
     "# importing all the necessary libraries\n",
     "import os\n",
     "import pandas as pd\n",
-    "import requests as req\n",
-    "import re"
+    "import requests as req"
    ]
   },
   {
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +85,7 @@
        "(2356, 17)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,33 +161,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1330</th>\n",
-       "      <td>757597904299253760</td>\n",
-       "      <td>https://pbs.twimg.com/media/CoOGZjiWAAEMKGx.jpg</td>\n",
+       "      <th>903</th>\n",
+       "      <td>700062718104104960</td>\n",
+       "      <td>https://pbs.twimg.com/media/CbcfUxoUAAAlHGK.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>doormat</td>\n",
-       "      <td>0.836106</td>\n",
+       "      <td>hummingbird</td>\n",
+       "      <td>0.180998</td>\n",
        "      <td>False</td>\n",
-       "      <td>wallet</td>\n",
-       "      <td>0.056627</td>\n",
+       "      <td>peacock</td>\n",
+       "      <td>0.135179</td>\n",
        "      <td>False</td>\n",
-       "      <td>purse</td>\n",
-       "      <td>0.051333</td>\n",
+       "      <td>eel</td>\n",
+       "      <td>0.075371</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1509</th>\n",
-       "      <td>785927819176054784</td>\n",
-       "      <td>https://pbs.twimg.com/media/CugtKeXWEAAamDZ.jpg</td>\n",
+       "      <th>1770</th>\n",
+       "      <td>827600520311402496</td>\n",
+       "      <td>https://pbs.twimg.com/media/C3w6RYbWQAAEQ25.jpg</td>\n",
        "      <td>1</td>\n",
-       "      <td>teddy</td>\n",
-       "      <td>0.972070</td>\n",
-       "      <td>False</td>\n",
-       "      <td>toy_poodle</td>\n",
-       "      <td>0.008493</td>\n",
+       "      <td>Pembroke</td>\n",
+       "      <td>0.325638</td>\n",
        "      <td>True</td>\n",
-       "      <td>chow</td>\n",
-       "      <td>0.002883</td>\n",
+       "      <td>golden_retriever</td>\n",
+       "      <td>0.317235</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Labrador_retriever</td>\n",
+       "      <td>0.116087</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -197,19 +196,19 @@
       ],
       "text/plain": [
        "                tweet_id                                          jpg_url  \\\n",
-       "1330  757597904299253760  https://pbs.twimg.com/media/CoOGZjiWAAEMKGx.jpg   \n",
-       "1509  785927819176054784  https://pbs.twimg.com/media/CugtKeXWEAAamDZ.jpg   \n",
+       "903   700062718104104960  https://pbs.twimg.com/media/CbcfUxoUAAAlHGK.jpg   \n",
+       "1770  827600520311402496  https://pbs.twimg.com/media/C3w6RYbWQAAEQ25.jpg   \n",
        "\n",
-       "      img_num       p1   p1_conf  p1_dog          p2   p2_conf  p2_dog     p3  \\\n",
-       "1330        1  doormat  0.836106   False      wallet  0.056627   False  purse   \n",
-       "1509        1    teddy  0.972070   False  toy_poodle  0.008493    True   chow   \n",
+       "      img_num           p1   p1_conf  p1_dog                p2   p2_conf  \\\n",
+       "903         1  hummingbird  0.180998   False           peacock  0.135179   \n",
+       "1770        1     Pembroke  0.325638    True  golden_retriever  0.317235   \n",
        "\n",
-       "       p3_conf  p3_dog  \n",
-       "1330  0.051333   False  \n",
-       "1509  0.002883    True  "
+       "      p2_dog                  p3   p3_conf  p3_dog  \n",
+       "903    False                 eel  0.075371   False  \n",
+       "1770    True  Labrador_retriever  0.116087    True  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +276,7 @@
     "    one_id (int): use when you want to query only for one tweet\n",
     "    failed_ids (List Object): a list will be retured so that, this fuction can be called once again on those ids\n",
     "    '''\n",
-    "    new_file_name = ''; failed_ids = []\n",
+    "    new_file_name = ''; failed_ids = []; tweet_df = []\n",
     "    \n",
     "    # checking if file exists\n",
     "    if os.path.exists(files_list[2]):\n",
@@ -291,8 +290,8 @@
     "        with open(new_file_name, mode = 'w') as outfile:\n",
     "            for one_id in ids:\n",
     "                try:\n",
-    "                    page = api_ins.get_status(one_id, tweet_mode='extended')\n",
-    "                    json.dump(page, outfile)\n",
+    "                    content = api_ins.get_status(one_id, tweet_mode='extended')\n",
+    "                    json.dump(content, outfile)\n",
     "                    outfile.write('\\n')\n",
     "                \n",
     "                except Exception as e:\n",
@@ -301,23 +300,27 @@
     "    \n",
     "    # querying a single id\n",
     "    else:\n",
-    "        file_to_use = [s for s in os.listdir() if \"tweet_json\" in s][-1]\n",
-    "        with open(file_to_use, mode = 'a') as outfile:\n",
-    "            try:\n",
-    "                page = api_ins.get_status(one_id, tweet_mode='extended')\n",
-    "                json.dump(page, outfile)\n",
-    "                outfile.write('\\n')\n",
+    "        try:\n",
+    "            content = api_ins.get_status(one_id, include_entities = True)\n",
+    "            favorites = content['favorite_count']\n",
+    "            retweets = content['retweet_count']\n",
     "            \n",
-    "            except Exception as e:\n",
-    "                print(\"Error for: \" + str(one_id) + \" - \" + str(e))\n",
-    "                failed_ids.append(one_id)\n",
+    "            tweet_df.append({'tweet_id': int(one_id),\n",
+    "                        'favorites': int(favorites),\n",
+    "                        'retweets': int(retweets)})\n",
+    "            \n",
+    "            return tweet_df\n",
+    "                           \n",
+    "        except Exception as e:\n",
+    "            print(\"Error for: \" + str(one_id) + \" - \" + str(e))\n",
+    "            failed_ids.append(one_id)\n",
     "\n",
     "    return failed_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -363,22 +366,8 @@
       "Error for: 827228250799742977 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 802247111496568832 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 775096608509886464 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
-      "Error for: 770743923962707968 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rate limit reached. Sleeping for: 492\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error for: 761334018830917632 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
-      "That took about 15.3 mins.\n"
+      "Error for: 770743923962707968 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "That took about 6.6 mins.\n"
      ]
     }
    ],
@@ -399,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we have about 14 failed requests.\n"
+      "we have about 13 failed requests.\n"
      ]
     }
    ],
@@ -417,29 +406,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Rate limit reached. Sleeping for: 501\n"
+      "Rate limit reached. Sleeping for: 397\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error for: 678023323247357953 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
-      "That took about 15.1 mins.\n"
+      "Error for: 758740312047005698 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
+      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "That took about 13.7 mins.\n"
      ]
     }
    ],
@@ -460,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -478,14 +461,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Rate limit reached. Sleeping for: 316\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That took about 4.0 mins.\n"
+      "Error for: 676957860086095872 - Failed to send request: ('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
+      "That took about 9.8 mins.\n"
      ]
     }
    ],
@@ -506,14 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we have about 0 failed requests.\n"
+      "we have about 1 failed requests.\n"
      ]
     }
    ],
@@ -524,14 +515,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total failed request are: 16\n",
+      "Total failed request are: 16. \n",
+      "\n",
       "Error for: 888202515573088257 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 873697596434513921 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 872668790621863937 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
@@ -545,38 +537,31 @@
       "Error for: 802247111496568832 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 775096608509886464 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
       "Error for: 770743923962707968 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
-      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n"
+      "Error for: 754011816964026368 - [{'code': 144, 'message': 'No status found with that ID.'}]\n",
+      "\n",
+      "We were able to retrieve 2 records, others failed.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# lets save the failed ids into one master list\n",
     "failed_ids = test_one + test_two + test_three\n",
-    "print(\"Total failed request are: {}\".format(len(failed_ids)))\n",
+    "print(\"Total failed request are: {}. \\n\".format(len(failed_ids)))\n",
     "\n",
-    "# ids that failed\n",
-    "indi_fail = []\n",
+    "# ids that failed and the ones that passed\n",
+    "indi_fail = []; success = []\n",
     "\n",
     "#for each failed id, lets try to fetch status individually.\n",
     "for failed_id in failed_ids:\n",
     "    temp = fetch_and_save(ids = None, api_ins = api, one_id = failed_id)\n",
-    "    indi_fail.append(temp)\n",
+    "    indi_fail.append(temp[0])\n",
     "\n",
     "# removing empty elements from list\n",
-    "indi_fail = [x for x in indi_fail if x]\n",
+    "success = [x for x in indi_fail if not isinstance(x, (int))]\n",
+    "indi_fail = [x for x in indi_fail if isinstance(x, (int))]\n",
     "\n",
     "# checking if there is change\n",
-    "len(failed_ids) - len(indi_fail)"
+    "print(\"\\nWe were able to retrieve {} records, others failed.\".format(len(failed_ids) - len(indi_fail)))"
    ]
   },
   {
@@ -603,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((886, 32), (898, 32), (558, 28))"
+       "((887, 32), (898, 32), (555, 28))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,12 +614,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_master = pd.concat([json_1, json_2, json_3], ignore_index = True, join = 'outer', sort = True)\n",
     "json_master.to_json('tweet_master.txt', orient = 'records', lines = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# removing objects that are not required.\n",
+    "del archive, img_pre_test\n",
+    "del json_1, json_2, json_3, json_master\n",
+    "del indi_fail, end, start, test_one, test_two, test_three, set_one, set_two, set_three\n",
+    "del consumer_key, consumer_secret, access_token, access_secret, auth, api\n",
+    "\n",
+    "# we are not removing success and files_list, making sure we stick to good programming practices - reusablity."
    ]
   },
   {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -658,11 +658,10 @@
        " 'error.png',\n",
        " 'New Text Document.txt',\n",
        " 'README.md',\n",
-       " 'Untitled.ipynb',\n",
        " 'wrangle_act.ipynb']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +691,8 @@
     "\n",
     "# removing the tweet_json and tweet_json_1 files as they are not required anymore\n",
     "for file in [s for s in os.listdir() if \"tweet_json\" in s]:\n",
-    "    os.remove(file)\n",
+    "    if os.path.exists(file):\n",
+    "        os.remove(file)\n",
     "    \n",
     "# lisitng the current directory\n",
     "os.listdir()\n",
@@ -701,11 +701,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# renaming files_list\n",
+    "for i in range(3):\n",
+    "    files_list[i] = folder + '/'+ files_list[i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. [x] **Last thing to do is to extract `retweet_count` and `favourite_count` from `tweet_master.txt`, saving the result as .csv**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>retweets</th>\n",
+       "      <th>favorites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2211</th>\n",
+       "      <td>668268907921326080</td>\n",
+       "      <td>243</td>\n",
+       "      <td>565</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>810254108431155201</td>\n",
+       "      <td>3699</td>\n",
+       "      <td>15766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1861</th>\n",
+       "      <td>675109292475830276</td>\n",
+       "      <td>1190</td>\n",
+       "      <td>2884</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                tweet_id  retweets  favorites\n",
+       "2211  668268907921326080       243        565\n",
+       "510   810254108431155201      3699      15766\n",
+       "1861  675109292475830276      1190       2884"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_json = pd.read_json(files_list[2], lines = True, encoding = 'utf-8')\n",
+    "tweet_json = tweet_json[['id', 'retweet_count','favorite_count']]\n",
+    "tweet_json.rename(index = str, columns={'id' : 'tweet_id', 'retweet_count': 'retweets','favorite_count': 'favorites'}, inplace = True)\n",
+    "tweet_json.append(success, ignore_index = True)\n",
+    "tweet_json.to_json(files_list[2], orient = 'records', lines = True)\n",
+    "tweet_json.sample(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Assessing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
