Done with gatherig, now assessing

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -568,21 +568,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<span style=\"color:red\"> We have 14 missing records, the following were confirmed using `twurl` command from Ruby/Gems.</span>**<br>\n",
-    "**<span style=\"color:green\"> The possible reason is.</span>**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![error](error.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "4. [x] **Okay, let's combine the successful jsons into one file, called the `tweet_master.txt`**"
    ]
   },
@@ -794,11 +779,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary\n",
+    "\n",
+    "- We know, that gathering is a the first step in wrangling.\n",
+    "- We were successful in gathering from three different sources with different techniques:\n",
+    "    - Data given at hand.\n",
+    "    - Fetch from flat file stored on a server.\n",
+    "    - From API.\n",
+    "\n",
+    "- There a total of 14 missing data points, tried a different ways for retrieving them, using the API as well as `twurl` of the `Ruby` package, but they were not to be found, as stated below in the highlighted section.\n",
+    "\n",
+    "***<span style=\"color: ##6c6cff\">So let's start with assessing the data.</span>***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![error](error.png)"
+   ]
   },
   {
    "cell_type": "markdown",
